Fix canvas alignment issue

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -105,18 +105,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-canvas {
+canvas, video {
   position: absolute;
   left: 0;
-  right: 0;
   top: 0;
-  bottom: 0;
-}
-
-video {
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 button {
